--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "node dist/index.js web"
   },
   "dependencies": {
+    "@alicloud/bssopenapi20171214": "^1.0.10",
     "@alicloud/cas20200407": "^1.0.7",
     "@alicloud/ecs20140526": "^3.0.0",
     "@alicloud/openapi-client": "^0.4.1",
