--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yunser/aliyun-cli",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Aliyun Tools",
   "main": "./dist/index.js",
   "author": "Yunser",
@@ -26,9 +26,11 @@
     "@alicloud/pop-core": "^1.7.12",
     "@alicloud/rds20140815": "^2.1.1",
     "@alicloud/tea-util": "^1.4.4",
+    "ansi-colors": "^4.1.3",
     "commander": "^9.4.1",
     "moment": "^2.29.4",
-    "table": "^6.8.0"
+    "table": "^6.8.0",
+    "tencentcloud-sdk-nodejs": "^4.0.461"
   },
   "devDependencies": {
     "@types/node": "^14.18.24",
