--- a/package.json
+++ b/package.json
@@ -22,16 +22,22 @@
     "@alicloud/bssopenapi20171214": "^1.0.10",
     "@alicloud/cas20200407": "^1.0.7",
     "@alicloud/cdn20180510": "^1.2.0",
+    "@alicloud/cms20190101": "^2.0.8",
+    "@alicloud/devops20210625": "^4.14.5",
     "@alicloud/ecs20140526": "^3.0.0",
     "@alicloud/openapi-client": "^0.4.1",
     "@alicloud/pop-core": "^1.7.12",
+    "@alicloud/r-kvstore20150101": "^3.0.1",
     "@alicloud/rds20140815": "^2.1.1",
     "@alicloud/tea-util": "^1.4.4",
     "ansi-colors": "^4.1.3",
+    "axios": "^1.7.2",
     "commander": "^9.4.1",
     "moment": "^2.29.4",
     "table": "^6.8.0",
-    "tencentcloud-sdk-nodejs": "^4.0.461"
+    "tencentcloud-sdk-nodejs": "^4.0.461",
+    "tencentcloud-sdk-nodejs-lighthouse": "^4.0.705",
+    "tencentcloud-sdk-nodejs-vpc": "^4.0.705"
   },
   "devDependencies": {
     "@types/node": "^14.18.24",
